--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>Vanilla ES6 • TodoMVC</title>
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="index.css"> -->
   </head>
   <body>
 
-    <div class="todoapp" id="root"></div>
+    <div id="root"></div>
 
   </body>
 </html>
