--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html lang="en" data-framework="es6">
   <head>
     <meta charset="utf-8">
-    <title>Vanilla ES6 • TodoMVC</title>
+    <title>ToDo App Kata</title>
     <!-- <link rel="stylesheet" href="index.css"> -->
   </head>
   <body>
